Fix for http://webtrees.net/forums/10-help-for-ver-10-latest-release/3374-welcome-block-horiz-scrollbar-safari-5

--- a/themes/webtrees/style.css
+++ b/themes/webtrees/style.css
@@ -697,7 +697,7 @@ a:hover .nameZoom {
 
 .blockcontent {
 	margin-left:auto;
-	margin-right:5px;
+	margin-right:auto;
 	margin-bottom:10px;
 	font-size: 13px;
 	overflow:auto;
